# pine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pine.cabal  test.p
.git.bk/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git.bk/logs/: HEAD
.git.bk/objects/pack/: pack-0c9284302dbb45ffe4f30bf3f2bbd80c36de50ef.idx  pack-0c9284302dbb45ffe4f30bf3f2bbd80c36de50ef.pack  pack-687a233510682ff72fc1657008cdc285448d6d9b.idx  pack-687a233510682ff72fc1657008cdc285448d6d9b.pack  pack-d9c84ad2c55a1e0e93a882db630d6b5acdb3b614.idx  pack-d9c84ad2c55a1e0e93a882db630d6b5acdb3b614.pack
.git.bk/refs/heads/: feature-parsing  (+2 more)
.github/workflows/: rust.yml
app/: Lambda.hs  Machine.hs  Main.hs  Parse.hs  Scan.hs
ast/: Cargo.toml
ast/ast_proc_macros/: Cargo.toml
ast/src/: ast.rs  error.rs  lex.rs  lib.rs  operator.rs  parse.rs  symbol.rs  token.rs
ast/tests/: single_file_test.rs
pine/: Cargo.toml
pine/src/: main.rs
pvm/: Cargo.toml
pvm/pvm_proc_macros/: Cargo.toml
pvm/src/: cast.rs  conf.rs  error.rs  inst.rs  lib.rs  operand.rs
pvm/tests/: pvm_test.rs
resources/: example.p  example.pvm
sem/: Cargo.toml
sem/src/: lib.rs  scoping.rs  typing.rs
src/: main.rs
test_util/: Cargo.toml
test_util/src/: lib.rs
test_util/test_util_proc_macros/: Cargo.toml
tests/: lex_single_file_test.rs  lex_unit_test.rs  parse_single_file_test.rs  parse_unit_test.rs  single_file_lex_test.rs  single_file_parse_test.rs  traverse_single_file_test.rs
tests/common/: mod.rs
tests_proc_macros/: Cargo.toml
tests_proc_macros/src/: lib.rs
(+179 files in other folders)
